# igc-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
benches/: benchmark.rs
examples/: example.igc  read_fixes.rs  serde.rs  show-errors.rs
proptest-regressions/records/: a_record.txt  b_record.txt  c_record.txt  h_record.txt  k_record.txt  mod.txt
src/: lib.rs
src/records/: a_record.rs  b_record.rs  c_record.rs  d_record.rs  e_record.rs  extension.rs  f_record.rs  g_record.rs  h_record.rs  i_record.rs  j_record.rs  k_record.rs  l_record.rs  mod.rs
src/util/: coord.rs  datetime.rs  display_option.rs  manufacturer.rs  mod.rs  parse_error.rs
