[package]
name = "igc"
description = "A fast, minimal parser for IGC flight recorder files"
version = "0.1.0"
authors = ["Joe Roberts <joe@jwjr.co.uk>"]
repository = "https://github.com/Joey9801/igc-rs"
documentation = "https://docs.rs/igc"
license = "MIT"
edition = "2018"

[dev-dependencies]
approx = "^0.3.0"
criterion = "0.2"
proptest = "0.8.7"

[[bench]]
name = "benchmark"
harness = false
