[package]
name = "igc"
description = "A fast, minimal parser for IGC flight recorder files"
version = "0.2.1"
authors = ["Joe Roberts <joe@jwjr.co.uk>"]
repository = "https://github.com/Joey9801/igc-rs"
documentation = "https://docs.rs/igc"
readme = "README.md"
license = "MIT"
edition = "2018"

[dev-dependencies]
approx = "^0.3.0"
criterion = "0.2"
encoding = "0.2.33"
proptest = "0.8.7"

[[bench]]
name = "benchmark"
harness = false
